# scaler-hackerthon

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  client.py  graders.py  inference.py  models.py  openenv_compat.py  pyproject.toml  tasks.py  validate_submission.py
outputs/evals/: baseline_scores.json
server/: __init__.py  app.py  requirements.txt  triage_environment.py
